@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-03T01:05:08Z",
+  "timestamp" : "2022-07-03T08:13:25Z",
   "count_outdated" : 372,
   "uniques_outdated" : 201,
   "count" : 396,
-  "uniques" : 215,
+  "uniques" : 216,
   "clones" : [
     {
       "timestamp": "2022-06-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -93,6 +93,13 @@
       "timestamp": "2022-07-02T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
