@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-06-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-07-02T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-03T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
